2001-12-12  Glynn Foster  <glynn.foster@sun.com>

	* button-widget.c, launcher.c, panel-widget.c,
	* session.c:

	Fix stuff so that panel context menus work again.

2001-12-12  Mark McLoughlin  <mark@skynet.ie>

	* xstuff.c: (xstuff_set_wmspec_strut):
	_NET_WM_STRUT properties are of type XA_CARDINAL 
	not XA_ATOM.

2001-12-11  Glynn Foster  <glynn.foster@sun.com>
	* foobar-widget.c:
	  Scale pixmaps when required for proper display.
	  Add padding to the size of the foo clock so we dont
	  get movement when the label allocates more space.

2001-12-11  Glynn Foster  <glynn.foster@sun.com>

	* button-widget.c, launcher.c,  menu.c
	  panel-widget.c, panelglobalconfig.schemas
	  session.c:

	Make the foo clock use gconf.

2001-12-11 Stephen Browne <stephen.browne@sun.com>

	* gnome-properties.c gnome-properties.glade
	  menu.c

	 Fixed confirm-panel-removal and drawer-autoclose config
	 Gave the global props dialog a proper name

2001-12-11  Anders Carlsson  <andersca@gnu.org>

	* main.c (main): Always restart here.

2001-12-10  Glynn Foster  <glynn.foster@sun.com>

	* gnome-panel-properties.desktop, menu.c:
	
	Rename for global properties dialog.

2001-12-10  Glynn Foster  <glynn.foster@sun.com>

	* basep-widget.c, gnome-panel-properties.c
	  gnome-panel-properties.glade, main.c
	  panel-gconf.c, panel-gconf.h, panel_config_global.h
	  panelglobalconfig.schemas, session.c: 

	Fix up gconf stuff. Now things work with the global
	properties dialog.

2001-12-10 Stephen Browne <stephen.browne@sun.com>

	* gnome-panel-properties.c
	* gnome-panel-properties.glade

 	now uses /apps/panel/global keys
	removed stuff from glade file that isnt working yet
	made remaining properties work

2001-12-10  Alexander Larsson  <alla@lysator.liu.se>

	* basep-widget.c (basep_widget_realize):
	Call xstuff_set_wmspec_state_hints ()

	* xstuff.[ch] (xstuff_set_wmspec_state_hints):
	New function to set the WMSPEC hints for the panel
	SKIP_PAGER, SKIP_TASKLIST and STICKY.
