@@ -1,5 +1,13 @@
 2001-12-12  Glynn Foster  <glynn.foster@sun.com>
 
+	* Makefile.am, main.c, panel-gconf.c,
+	panel-per-panel-config.schemas: 
+
+	Did a little work according to Alex's guidelines. 
+	Things are still a long way off. MUCH work.
+
+2001-12-12  Glynn Foster  <glynn.foster@sun.com>
+
 	* button-widget.c, launcher.c, panel-widget.c,
 	* session.c:
 
